apps/mealwhisperer/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: mealwhisperer
    component: frontend
  name: mealwhisperer-fe
spec:
  replicas: 1
  selector:
    matchLabels:
      run: mealwhisperer
      component: frontend
  template:
    metadata:
      labels:
        run: mealwhisperer
        component: frontend
    spec:
      containers:
        - image: ghcr.io/ericgoedtel/mealwhisperer/mealwhisperer-frontend:latest
          name: mealwhisperer
          ports:
            - containerPort: 80
              name: frontend
      volumes: []
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: mealwhisperer
    component: api
  name: mealwhisperer-api
spec:
  replicas: 1
  selector:
    matchLabels:
      run: mealwhisperer
      component: api
  template:
    metadata:
      labels:
        run: mealwhisperer
        component: api
    spec:
      containers:
        - env:
            - name: LOG_LEVEL
              value: WARNING
            - name: GEMINI_MODEL_NAME
              value: gemini-1.5-flash
            - name: GOOGLE_API_KEY
              valueFrom: # Stored in 1password
                secretKeyRef:
                  name: gemini-api-key
                  key: password
          image: ghcr.io/ericgoedtel/mealwhisperer/mealwhisperer-api:latest
          name: mealwhisperer
          ports:
            - containerPort: 5000
              name: api
      volumes: []
