apps/mealwhisperer/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mealwhisperer-fe
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
      name: frontend
  selector:
    run: mealwhisperer
    component: frontend
---
apiVersion: v1
kind: Service
metadata:
  name: mealwhisperer-api
spec:
  ports:
    - port: 5000
      protocol: TCP
      targetPort: 5000
      name: api
  selector:
    run: mealwhisperer
    component: api
