apps/mealwhisperer/base/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: mealwhisperer
spec:
  # Activate this route for the standard HTTPS entrypoint
  entryPoints: ["websecure"]
  routes:
    - kind: Rule
      match: Path(`/mealwhisperer`)
      priority: 15
      middlewares:
        - name: mealwhisperer-redirect-slash
      services:
        - name: mealwhisperer-fe
          namespace: mealwhisperer
          port: frontend
    - kind: Rule
      match: PathPrefix(`/mealwhisperer/api`)
      middlewares:
        - name: strip-prefix
      priority: 10
      services:
        - kind: Service
          name: mealwhisperer-api
          namespace: mealwhisperer
          port: api
    - kind: Rule
      match: PathPrefix(`/mealwhisperer`) && !PathPrefix(`/mealwhisperer/api`)
      priority: 5
      middlewares:
        - name: strip-prefix
      services:
        - kind: Service
          name: mealwhisperer-fe
          namespace: mealwhisperer
          port: frontend
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-prefix
spec:
  stripPrefix:
    prefixes:
      - /mealwhisperer
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: mealwhisperer-redirect-slash
spec:
  redirectRegex:
    regex: "^(https?://[^/]+.*)/mealwhisperer$"
    replacement: "${1}/mealwhisperer/"
    permanent: true
